# Bolt

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
res/: Drone.fbx
src/: Bolt.h  main.cpp
